--- a/CMS.Web/appsettings.json
+++ b/CMS.Web/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Content": {
+    "Id": 1,
+    "title": "title1",
+    "content": "content1",
+    "status": 1,
+    "add_time": "2020-01-01 16:29",
+    "modify_time": null
+  },
   "AllowedHosts": "*"
 }
